--- a/instagram-ui/src/Menu/Menu.scss
+++ b/instagram-ui/src/Menu/Menu.scss
@@ -1,14 +1,20 @@
 .Menu {
-    color: #333333;
-}
+  height: 60px;
 
-.home {
-    color: #333333;
-}
+  .navbar-brand {
+    color: #f54555;
+  }
 
+  .nav-link {
+    color: #ffffff;
+    transition: color 200ms;
+    font-size: 1.7em;
+    padding: 0 12px;
 
-@media (max-device-width:500px) {
-    #home-text{
-        display:none
+    &:hover {
+      color: #f54555;
+      text-decoration: none;
     }
+  }
+
 }
